--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -52,6 +52,7 @@
         </div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
+        <script type="text/javascript" src="js/jquery.ui.touch-punch.min.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
     </body>
 </html>
